--- a/Matplotlib_3D.ipynb
+++ b/Matplotlib_3D.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import  matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "#matplotlib in jupyter notebook\n",
+    "#to show matplotlib in jupyter notebook\n",
     "%matplotlib inline"
    ]
   },
